--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<img>
+<img src="ping.png">
+<br><br>
+<img src="nl1.png" alt=""><br><br>
+<img src="nl2.png" alt=""><br><br>
+<img src="whois.png" alt=""><br><br>
