--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 <img src="nl1.png" alt=""><br><br>
 <img src="nl2.png" alt=""><br><br>
 <img src="whois.png" alt=""><br><br>
+<img src="fz.png" alt="">
